--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <main>
-
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo"></div>
+                    <h3>Progamação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        
+                    </div>
+            </article>
+        </section>
     </main>
     <footer>
         <p>ai ai follow</p>
