--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <div class="cartao__conteudo__pergunta">
                         O que é JavaScript?
                     </div>
+                   <div
             </article>
         </section>
     </main>
